Added right text and pic

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,16 @@
 body {
-    background: #1549d8;
+    background: white;
     font-family: "Nunito", sans-serif;
 }
 
 .blurb h2 {
-   color: #EA1C2C;
+   color: black;
    font-weight: 100;
    font-size: 2.5rem;
 }
 
 .blurb p {
-    color: white;
+    color: black;
     font-weight: 100;
     font-size: 1.125rem;
     line-height: 2;
@@ -27,20 +27,20 @@ body {
 }
 
 #mainNavbar .nav-link {
-    color: white;
+    color: black;
 }
 
 #mainNavbar .nav-link:hover {
-    color: #EA1C2C;
+    color: white;
 }
 
 #mainNavbar .navbar-brand {
-    color: #EA1C2C;
+    color: black;
     font-size: 1.5rem;
 }
 
 #headingGroup span {
-    color: white;
+    color: black;
 }
 
 #headingGroup h1 {
@@ -49,9 +49,25 @@ body {
 }
 
 .navbar.scrolled {
-    background: rgb(0, 0, 0);
+    background: rgb(82, 113, 122);
     transition: background 500ms;
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+    }
+    
+    .video-container iframe,
+    .video-container object,
+    .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    }
 
 @media (max-width: 1200px) {
     #headingGroup h1 {
