--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 #mainNavbar .nav-link:hover {
-    color: white;
+    color: red;
 }
 
 #mainNavbar .navbar-brand {
@@ -68,6 +68,10 @@ body {
     width: 100%;
     height: 100%;
     }
+
+a {
+    color: inherit
+}
 
 @media (max-width: 1200px) {
     #headingGroup h1 {
